# nsai-for-infrastructure

./: .gitignore  LICENSE  README.md  leg_alphazero.ipynb  leg_gym_demo.ipynb  line_extending_game_0.ipynb  line_extending_rules.ipynb  line_extending_trad_rl.ipynb  pyproject.toml  tmoer_license.txt  understanding_alphazero.ipynb
src/: zg_game_demo_0.ipynb  zl_game_demo_0.ipynb
src/nsai_experiments/: alphazero_torch.py  line_extending_game_gym.py  line_extending_game_tools.py
src/nsai_experiments/general_az_1p/: agent.py  game.py  mcts.py  policy_value_net.py  utils.py
src/nsai_experiments/general_az_1p/bitstring/: bitstring_az_impl.py  bitstring_az_impl_milton.py  plot_metrics.py
src/nsai_experiments/general_az_1p/cartpole/: cartpole_az_demo.ipynb  cartpole_az_impl.py  cartpole_az_impl_milton.py  cartpole_easy_demo.py  meta_ablation.py
src/nsai_experiments/general_az_1p/zoning_game/: zgaz_demo.py  zgaz_easy_demo.py  zgaz_perf.py  zgaz_perf_analysis_run_10.ipynb  zgaz_perf_analysis_run_800.ipynb  zgaz_perf_analysis_run_kl_15.ipynb  zoning_game_alpha_zero_demo.ipynb  zoning_game_az_impl.py
src/nsai_experiments/general_az_1p/zoning_lang/: zoning_lang_az_impl.py
src/nsai_experiments/new_games_old_engine/: grammargame.py  helpers.py  make_game.py  netgame.py  netgrammargame.py  wrappers.py
src/nsai_experiments/zoning_game/: notebook_utils.py  zg_cfg.py  zg_cfg_policy.py  zg_direct_supervised.ipynb  zg_gym.py  zg_policy.py  zl_gym.py
tests/: test_az_cartpole.py  test_zoning_game.py
