[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsai_experiments"
version = "0.1"
readme = "README.md"
requires-python = ">= 3.10"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "ipykernel",
    "nltk",
    "torch",
    "torchsummary",
    "scipy",
    "scikit-learn",
    "gymnasium"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
